# 42_kassy

./: .42sh_history  CMakeCache.txt  CMakeList.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
src/: main.c
src/ast/: ast.c  ast.h
src/builtin/: builtin.c  builtin.h
src/execution/: execution.c  execution.h
src/grammar/: grammar.h  rule_and_or.c  rule_command.c  rule_compound.c  rule_do_group.c  rule_element.c  rule_else.c  rule_for.c  rule_funcdec.c  rule_if.c  rule_list.c  rule_pipeline.c  rule_prefix.c  rule_redir.c  rule_shell_command.c  rule_simple_command.c  rule_until.c  rule_while.c
src/lexer/: lexer.c  lexer.h  token.c
src/option/: option.c  option.h
src/prompt/: prompt.c  prompt.h
src/read/: read.c  read.h
src/structures/: structures.c  structures.h
src/tools/: tools.c  tools.h
src/variable/: variable.c  variable.h
